--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -104,3 +104,14 @@
   year={2014},
   publisher={American Psychological Association}
 }
+
+@article{perry2008role,
+  title={The role of impulsive behavior in drug abuse},
+  author={Perry, Jennifer L and Carroll, Marilyn E},
+  journal={Psychopharmacology},
+  volume={200},
+  number={1},
+  pages={1--26},
+  year={2008},
+  publisher={Springer}
+}
