--- a/Final Paper.Rmd
+++ b/Final Paper.Rmd
@@ -1,15 +1,20 @@
 ---
 title: "Final Paper"
 output: pdf_document
+author: "Rob St. Louis and Sasen Cain, for the Pediatric Imaging, Neurocognition and Genetics Study*"
 bibliography: bibliography.bib
 toc: true
 ---
+*Data used in preparation of this article were obtained from the Pediatric Imaging, Neurocognition and Genetics Study (PING) database (http://ping.chd.ucsd.edu). As such, the investigators within PING contributed to the design and implementation of PING and/or provided data but did not participate in analysis or writing of this report. A complete listing of PING investigators can be found at https://ping-dataportal.ucsd.edu/sharing/Authors10222012.pdf.
+
+
 
 ```{r,echo=FALSE,results='hide',message=FALSE,warning=FALSE}
 library(xtable)
 library(ggplot2)
 library(dplyr)
 library(magrittr)
+library(scales)
 
 
 
@@ -203,9 +208,9 @@ options(xtable.comment = FALSE)
 ```
 
 #Introduction
-The high apparent hereditibility of substance abuse disorders [XXXX]has long suggested that vulnerability may be genetic. There have now been broad studies comparing adult substance abusers to healthy controls in the hopes of identifying the genetic components of one’s risk. By identifying the specific genes that predict those who are affected by substance abuse disorders, we might be able to identify the mechanism underying various components of individuals susceptibiltiy to the drug in question. 
+The high apparent hereditability of substance abuse disorders [XXXX]has long suggested that vulnerability may be genetic. There have now been broad studies comparing adult substance abusers to healthy controls in the hopes of identifying the genetic components of one’s risk. By identifying the specific genes that predict those who are affected by substance abuse disorders, we might be able to identify the mechanism underying various components of individuals' susceptibility to the drug in question. 
 
-However, what is distinct about substance abuse is that it one must first use a psychoactive substance to become addicted to that substance. Those who struggle with substance abuse appear to have lower discount rates (cite) and are more risk seeking(cite) than the general population. Part of the genetic risk factors that may influence one’s likelihood of acquiring a debilitation dependence on a psychoactive subanstance may be those that influence the likelihood of trying or using the drug, despite the apparent adverse consequences.
+However, what is distinct about substance abuse is that one must first use a psychoactive substance to become addicted to that substance. Those who struggle with substance abuse appear to have lower discount rates (cite), and they are more risk seeking(cite) than the general population. Part of the genetic risk factors that may influence one’s likelihood of acquiring a debilitating dependence on a psychoactive substance may be those that influence the likelihood of trying or using the drug, despite the apparent adverse consequences.
 
 
 However, the risky and behavior and possible poor judgement of those who try dangerous substances clearly does not exist in a vacuum. Our social and economic environment will influence both the availability of psychoactive substances, the messages we learn about the substances, and the magnitude of the consequences for using those substances. In adults there is a robust association between SES status and substance abuse (cite). However, there is signifcant debate about whether this is true for adolescents [@hanson2007socioeconomic,@goodman2002socioeconomic]. This suggest that, SES might not play a major role in likelihood of using a substance. Another possibility, however, is that SES might only have a protective influence for those who are particularly vulnerable. 
@@ -223,14 +228,19 @@ Another related SNP studied by these researchers was the C957T polymorphism of t
 
 #Methods
 
-##Participants
-Participants were recruited throuh PING, a nine site, cross-sectional study of roughly 1,400 children and adolencents from 3-20 years of age. Participants provided a saliva sample for whole genome sequencing, underwent three hours of neurocognitive testing and completed a one hour MRI session. Participants were subject to modest screening and those with a significant neurological disorder, or whose mother used alcohol or an illegal substance daily during pregnancy were screened.  Six of the nine sites participated in the additional testing, where children 14 and older were sent a web based interview based on PhenX questionniares that included questions about their tobacco, alcohol and illegal substance use. We do not have access to the geographcial location of the participants. PhenX is a site of validated measures, sponsored by NIH, designed to facilite cross-study comparisons(Hamilton et. al 2006)
+Data used in the preparation of this article were obtained from the Pediatric Imaging, Neurocognition and Genetics (PING) Study database (http://ping.chd.ucsd.edu/). PING was launched in 2009 by the National Institute on Drug Abuse (NIDA) and the Eunice Kennedy Shriver National Institute Of Child Health & Human Development (NICHD) as a 2-year project of the American Recovery and Reinvestment Act. The primary goal of PING has been to create a data resource of highly standardized and carefully curated magnetic resonance imaging (MRI) data, comprehensive genotyping data, and developmental and neuropsychological assessments for a large cohort of developing children aged 3 to 20 years. The scientific aim of the project is, by openly sharing these data, to amplify the power and productivity of investigations of healthy and disordered development in children, and to increase understanding of the origins of variation in neurobehavioral phenotypes. For up-to-date information, see http://ping.chd.ucsd.edu/.
+
+##Participants   
+
+Participants were recruited throuh PING, a nine site, cross-sectional study of roughly 1,400 children and adolencents from 3-20 years of age. Participants provided a saliva sample for whole genome sequencing, underwent three hours of neurocognitive testing and completed a one hour MRI session. Participants were subject to modest screening and those with a significant neurological disorder, or whose mother used alcohol or an illegal substance daily during pregnancy were screened.  Six of the nine sites participated in the additional testing, where children 14 and older were sent a web based interview of PhenX questionniares that included questions about their tobacco, alcohol and illegal substance use. We do not have access to the geographcial location of the participants. 
+
+
 
 ##Single Nucleotide Polymorphisms
 Participants DNA was collected with a mouth swab and a whole genotype sequencing was performed using the Illumina Human660W-Quad BeadChip. Included in the 494,082 SNPs passing the PING quality control filters were the Val158Met polymorphism that influences the COMT gene (rs4680), and an SNP influencing post-synaptic D2 density (rs12364283) in the striatum (Frank & Hutchingson, 2011). For each participant, we assigened a scalar gene-dose value to them, definited in terms of the likely protective effect of their allels. For COMT, MET/MET =2, MET/VAL =0, VAL/VAL =-1, with a frequency of 
-.  Their relative proportions are 14:81:56 respectively. For rs12364283, AA= 1, AT = -1 with a relative proportions of 141:10 respectively. Other studies have found a population freqency of roughly 15% for the AT allelic variety [@frank2009genetic], so the minority varient is significantly underrepresented in our population (Binomial test(exact) p = .002). The distribution of the rs12364283 and rs4680 allels apears to be significant $\chi^2$=0.232, p=.896
+.  Their relative proportions are 14:81:56 respectively. For rs12364283, AA= 1, AT = -1 with a relative proportions of 141:10 respectively. Other studies have found a population freqency of roughly 15% for the AT allelic variety [@frank2009genetic], so the minority varient is significantly underrepresented in our population (Binomial test(exact) p = .002). The distribution of the rs12364283 and rs4680 allels apears to be significant $\chi^2$=0.232, p=.896.
 
-```{r,results='asis',echo=FALSE}
+```{r,results='hide',echo=FALSE}
 
 binom.test(10,151,p=.15)
 
@@ -252,10 +262,9 @@ Data$DRD2 <-ifelse(Data$rs12364283=="GA",0,Data$DRD2)
 
 ```
 
-
 To make sure this SNPs were not related to ethnic background, we includeded a measure of genetic ancestry for each participant. This was estimated by @akshoomoff2014nih, comparing PING participants to a large reference population. Each particpant was assigned a perentage ancestry to the six clusters which emerged from the data: Europe, Africa, East Asia, Oceania, Central Asia, American Indian To preven perfect colinearity we dropped the American Indian percentage. A Likelihood Ratio Test revealed that an that genetic ancessestry was boarderline significant effect of genetic ancestry on allelic type for the rs6480 SNP, $\chi^2$(5) =10.5, p = .06.  Similarly, at Likelihood Ratio Test revealed that there was a signifcant effect of ancestry on the rs12364283 allelic frequency $\chi^2$(5) =13, p = .02. Therefore, we will include genetic ancestry in our dataset, to control directly for the effect of genetic ancestry. 
 
-```{r,echo=FALSE}
+```{r,echo=FALSE,results='asis'}
 
 #names(Data)
 g1 <- polr(as.factor(COMT)~Africa_Ancestry+EastAsia_Ancestry+EastAsia_Ancestry+CentralAsia_Ancestry+Europe_Ancestry,data=Data,method="logistic")
@@ -265,7 +274,7 @@ anova(g0,g1,test="Chisq")
 m1 <- (glm(DRD2~EastAsia_Ancestry+EastAsia_Ancestry+CentralAsia_Ancestry+Europe_Ancestry,data=Data,family="binomial"))
 m0 <- (glm(DRD2~1,data=Data,family="binomial"))
 
-anova(m0,m1,test="LRT")
+xtable(anova(m0,m1,test="LRT"))
 
 ```
 
@@ -275,15 +284,24 @@ Parents of participants were asked to indicate their family's total income in th
 
 
 ##Significant Substance Abuse. 
-Participants 14 and older at were provided with an online verions of the PhenX ... drug history questionnaire. This asked about their use of **SASEN Answer**
+The PhenX (consensus measures for Phenotypes and eXposures) Toolkit (http://www.phenxtoolkit.org) was used to assess substance abuse. These standardized measures  were sponsored by the National Human Genome Research Institute to integrate behavioral outcomes and environmental factors with genomic data, and to facilitate cross-study comparisons(Hamilton et. al 2006) and multi-site investigations. The PING study administered PhenX as a web-based self-report questionnaire--either in-lab or at home--that took 20-90 minutes to complete, depending on age and substance exposure history. While our analysis focuses on items relating to substance use and addiction, PhenX measures of affective and mental health outcomes (emotional state, depression, anxiety, impulsivity, stress, self-esteem, self-efficacy) and school environment were also collected. Combined with the family history, cognitive testing, and genomic testing of each participant, this provided a rich dataset to address how SES might influence genetic contributions to substance use behavior. 
+Our goal was to create a binary dependent variable that captured whether participants had engaged in high-risk substance abuse, so that our model would be predicting the probability of substance abuse. This is equivalent to creating two groups, Users and Naives. We reasoned that few participants would have developed full-blown addiction, especially in a pediatric sample, where parental vigilance, legal restrictions, and limited income reduces access to substances. Thus, classification as a User was based on ever having abused any substance included in the study.  We adopted this liberal criterion in the belief that becoming a User at a young age increases the risk of habit formation in adulthood, though our dataset cannot verify this.
+In contrast, classification as Naive was more stringent, which allowed stronger claims to be tested. Because Naives had never consumed any drugs or gotten drunk, they may exhibit more inhibitory control and harm avoidance. Or these individuals may have reduced response to rewarding stimuli. Our model tests these hypotheses as group-level differences in the dopaminergic mechanisms described above. 
+We recognize that some Naives, especially the younger ones, may choose to consume substances later in adolescence. Since genetic and household income influences are relatively stable, these mislabelled future-Users will weaken our analysis. This is a limitation of the PING design, since each participant completes PhenX at one timepoint in their lives. However, the inclusion of age as a predictor may mitigate this source of error.
 
 
+*Age*. Participants younger than age 14 were not asked about alcohol and illicit substances; therefore, we excluded younger participants from our analysis. The age range (at the time of PhenX completion) was [14.5, 22.67] years.
+
+*Substances*. Participants were classified as Users if they responded positively to ever having tried cigarettes, marijuana, cocaine, stimulants, meth-amphetamines, sedatives, tranquilizers, painkillers, hallucinogens, inhalants, or heroin--or if they had provided an age at which they first got drunk. (This was coded as a binary variable on ever having gotten drunk.) One participant was excluded for stating an age of first drunkenness that was younger than the age of initial alcohol use.
+Participants were classified as Naives if they stated that they had never tried any of those substances, and had never gotten drunk. This includes ten individuals who had consumed more than a sip or taste of alcohol. 
+Two questions (cigarettes and marijuana) allowed the response "Don't know/Decline to state". Eight participants selected this response on either question, but four of them already qualified as Users due to other substance history. The remaining four participants, who had no exposure to other drugs, were excluded from analysis, because they could not be confidently labelled as Naive.
 
 
-###Age
+#Results 
+
+##Effecs of Age
 
 Because this is a cross sectional study, we expect that age at the time of survey was likely to have a very large effect on the the likihood of using a substance. This is both because participants would have had more time to try a drug, and because earlier studies have shown older teens are more likely to have tried alcohol and other substances [@grant1997age]. To get a sense of this relationship, we plotted the proportion of users at each age who had used a psycho-active substance. Figure 1 shows this relationship.
-
 ```{r,echo=FALSE,fig.cap="Figure 1",fig.subcap="Error bars indicated 95% bionomial C.I."}
 
 Data$AgeRound <- floor(Data$Age)
@@ -317,12 +335,9 @@ qplot(AgeRound,p,data=PlotD) + geom_errorbar(aes(ymin=plow,ymax=phigh,width=0)) 
 ```
 
 
-##Substance Abuse
-
-We had three interacting hpothesis. The first is that the allelic variants that decreased COMT function and increased dopamine availablity in the prefrontal cortex would decrease the likelihood of using a substance. Second, that the allelic variants that increased DRD2 receptor density in the striatum would decrease the likelihood of using a substance. We put a greater focus on COMT as there was greater variablility in the genetic components. 
 
 
-###Ancestry
+##Ancestry
 
 We were concerned that ancestry could explain the underlying genetic interactions through their association with the SNPs, we first tested the probability that that Ancestry either predicted substance use, or that ancestry interacted with log income to influence substance use. For both tests, we found no evidence that ancestry mattered $\chi^2$(4)=5.024, p = .28 and $\chi^2$(9)=10.917, p = .28. Therefore, we dropped ancestry from our later models.
 
@@ -346,10 +361,16 @@ anova(m0,m2,test="Chisq")
 ```
 
 
+##Effect of Income and SNPs on Substance Use
+
+We had three interacting hpothesis. The first is that the allelic variants that decreased COMT function and increased dopamine availablity in the prefrontal cortex would decrease the likelihood of using a substance. Second, that the allelic variants that increased DRD2 receptor density in the striatum would decrease the likelihood of using a substance. We put a greater focus on COMT as there was greater variablility in the genetic components. 
+
+
+
 ###COMT
 
 
-```{r,echo=FALSE,}
+```{r,echo=FALSE}
 # qplot(FDH_3_Household_IncomeLog,UseSubstance,geom=c("point","smooth"),method = "lm",data=Data,facets=.~rs4680)+ylab("Predicted probability of using a su")
 
 
@@ -358,7 +379,7 @@ anova(m0,m2,test="Chisq")
 We conducted a logistic regression, the beta weights and Wald-z values are reported blow. As is clear, nothing except age is signifcant at the $\alpha$=.5 level. There is no evidence that the COMT polymorphism is related to substance use. 
 
 
-```{r}
+```{r,echo=FALSE,results='asis'}
 # m0 <- glm(UseSubstance~Age +Africa_Ancestry+EastAsia_Ancestry+EastAsia_Ancestry+CentralAsia_Ancestry+Europe_Ancestry,family='binomial',data=Data)
 # 
 # m1 <-glm(UseSubstance~Age +Africa_Ancestry+EastAsia_Ancestry+EastAsia_Ancestry+CentralAsia_Ancestry+Europe_Ancestry+COMT,family='binomial',data=Data)
@@ -383,7 +404,7 @@ xtable(summary(m3))
 
 However, as the likelihood ratio test below makes clear, there is no main effect of the COMT polymorphism.
 
-```{r}
+```{r,echo=FALSE,results='asis'}
 xtable(anova(m3,test="Chisq"))
 ```
 
@@ -419,14 +440,18 @@ xtable(summary(m3))
 ```{r,echo=FALSE,results='asis'}
 xtable(anova(m3,test="Chisq"))
 
-
 ```
 
-However, it appeared to be related to age, those over 21, were significantly more likely to have the allele that hurts negative reinforcement learning. So we conducted a boostrapping p
-```{r}
+However, it appeared to be related to age, those over 21, were significantly more likely to have the allele that hurts negative reinforcement learning. So we conducted a boostrapping, preserving all the current structure including the fact that 4 of the 10 people with the AG allel were over 21, and reran the Likelihood ratio test used above, preserving the at the significance test of the interaction. The p-value identified for our data  was smaller than 95.7% of the 10,000 bootstrapped samples, suggesting there is still boarderline evidence for a real effect. 
+
+```{r,echo=FALSE,results='hide'}
 
 Data3 <- Data
+
 chisq.test(table(Data$Age>21,Data$DRD2),simulate.p.value = T)
+
+
+
 
 sum(Data$Age>21)
  
@@ -442,54 +467,85 @@ Data3 %<>%
 # Z <- replicate(10000,RandSampl(Data3))
 # write.csv(Z, "z.csv")
 Z<- read.csv("z.csv")
-qplot(Z$x)
+# qplot(Z$x)
 eZ <- ecdf(Z$x)
 
 actual <- anova(m3,test="Chisq")[5,5]
 
-
+1-eZ(actual)
 ```
 
 
+However, it appears that this might be very sensitive to just a few points, which should make us quite anxious about interpretation. Below the the values plotted, with a linear estimate their to ease interpretation (note we have used logistic regressions to estimate the true values). As should be apparent, those with the GA version of the rs12364283  did not span the whole range of household income, and the interaction could be driven by an outlier, which is made larger in the graph below. A conservative way of correcting for this would be to limit the range similarly for those with the AA allele, and removing the outlier, then rerunning the anova. It appears the that in by doing both, the relationship replain significant, allthough the interpretation appears more limited. It appears that for those who are making over $30,00 a year, there is some evidence that a higher income increases the likelihood of those wih the GA allele using drugs and alcohol. 
+
+```{r,echo=FALSE}
+
+Data$outlier <- 0.1
+Data[122,"outlier"] <- 1
+qplot(Household_Income,UseSubstance,geom=c("smooth"),method="glm",data=Data,facets=.~rs12364283)+geom_point(aes(Household_Income,jitter(UseSubstance),size=outlier))+ theme(axis.text.x = element_text(angle = 90, hjust = 1))+scale_x_continuous(labels = comma) 
+
+qplot(Household_Income,UseSubstance,geom=c("smooth"),method="glm",data=Data[Data$Log10_Household_Income>4.5,],facets=.~rs12364283)+geom_point(aes(Household_Income,jitter(UseSubstance)))+ theme(axis.text.x = element_text(angle = 90, hjust = 1))+scale_x_continuous(labels = comma) 
+
+
+
+
+
+
+# qplot(Log10_Household_Income,UseSubstance,geom=c("smooth"),method="lm",data=Data[c(-122),],facets=.~rs12364283,color=AgeRound)+geom_point(aes(Log10_Household_Income,jitter(UseSubstance)))
+
+#data 136
+# m4<-glm(UseSubstance~Age+DRD2*Log10_Household_Income,family='binomial',data=Data[c(-122),])
+m5<-glm(UseSubstance~Age+DRD2*Log10_Household_Income,family='binomial',data=Data[Data$Log10_Household_Income>4.5,][-122,])
+
+s <- Data[Data$Log10_Household_Income>4.5,][-122,]
+
+```
+
+```{r,results='asis',echo=FALSE}
+xtable(anova(m5,test="Chisq"))
+
+
+```
+
 \pagebreak
-## Both SNPs together
 
 
-We also tested a full model including both genes together and 
+#Discussion
+It appears there is no strong evidence from this data that there is a significant inger
+
+. This suggests that individual variation in D2 receptors does not significantly influence likelihood of using Tobacco, Alcohol or other illegal substances. This study is significantly limited by the ultimately very small sample of data that we had full data for, which limited our power. This dataset also had significantly fewer 
 
 
 
 
 
 ```{r,echo=FALSE,results='asis'}
-m0 <- glm(UseSubstance~Age+Africa_Ancestry+EastAsia_Ancestry+EastAsia_Ancestry+CentralAsia_Ancestry+Europe_Ancestry,family='binomial',data=Data)
-
-m1 <-glm(UseSubstance~Age+Africa_Ancestry+EastAsia_Ancestry+EastAsia_Ancestry+CentralAsia_Ancestry+Europe_Ancestry+COMT+DRD2,family='binomial',data=Data)
-
-m2 <- glm(UseSubstance~Age+Africa_Ancestry+EastAsia_Ancestry+EastAsia_Ancestry+CentralAsia_Ancestry+Europe_Ancestry+COMT+DRD2+Log10_Household_Income,family='binomial',data=Data)
-
-m3 <- glm(UseSubstance~Age+Africa_Ancestry+EastAsia_Ancestry+EastAsia_Ancestry+CentralAsia_Ancestry+Europe_Ancestry+COMT+DRD2 +COMT*Log10_Household_Income+ DRD2*Log10_Household_Income,family='binomial',data=Data)
+# m0 <- glm(UseSubstance~Age,family='binomial',data=Data)
 # 
-# # Data$COMT <-ifelse(Data$rs4680=="AA",2,NA)
-# # Data$COMT <-ifelse(Data$rs4680=="AG",1,Data$COMT)
-# # Data$COMT <-ifelse(Data$rs4680=="GG",0,Data$COMT)
+# m1 <-glm(UseSubstance~Age+COMT+DRD2,family='binomial',data=Data)
 # 
-# # m2 <- glm(COMT~Gender+log(Age_At_PhenX_Completion)+rs4680+rs12364283 +FDH_3_Household_IncomeLog,
-# #             family='binomial',data=Data)
+# m2 <- glm(UseSubstance~Age+COMT+DRD2+Log10_Household_Income,family='binomial',data=Data)
 # 
-
-# xtable(summary(m3))
-xtable(anova(m3,test="Chisq"))
+# m3 <- glm(UseSubstance~Age+COMT+DRD2 +COMT*Log10_Household_Income+ DRD2*Log10_Household_Income,family='binomial',data=Data)
+# # 
+# # # Data$COMT <-ifelse(Data$rs4680=="AA",2,NA)
+# # # Data$COMT <-ifelse(Data$rs4680=="AG",1,Data$COMT)
+# # # Data$COMT <-ifelse(Data$rs4680=="GG",0,Data$COMT)
+# # 
+# # # m2 <- glm(COMT~Gender+log(Age_At_PhenX_Completion)+rs4680+rs12364283 +FDH_3_Household_IncomeLog,
+# # #             family='binomial',data=Data)
+# # 
+# 
+# # xtable(summary(m3))
+# xtable(anova(m3,test="Chisq"))
 
 ```
 
 
-```{r,echo=FALSE}
-qplot(Log10_Household_Income,jitter(UseSubstance),geom=c("point","smooth"),method="lm",data=Data,facets=.~rs12364283)
 
-qplot(Log10_Household_Income,jitter(UseSubstance),geom=c("point","smooth"),method="lm",data=Data,facets=.~rs4680)
 
-```
+
+
 
 
 
